<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 2010 Daniel Velazco
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Proxy Configuration Tool</string>
    
    <string name="credits">Credits</string>
    <string name="credits_ok">Ok</string>
    <string name="credits_sry">Developed by Daniel Velazco\nvelazcod@gmail.com</string>
    <string name="credits_txt">Special thanks go out to Tracphonejunkie, whiterabittorg, To0 and Insaincain on HowardForums.com and XDA-Developers.\n\nI might be missing more people and if so feel free to email me.\n\nThese guys were the ones that figured out and helped develop the method we are all using here to allow Android devices to work properly on MetroPCS.\n\nEnjoy.</string>
    
    <!-- Status -->
    	<string name="status">Status</string>
    	
    	<string name="proxy_status">Proxy status</string>
    	<string name="proxy_status_sry">Proxy: %s - U2NL: %s</string>
    	
    	<string name="status_checking">Checking status...</string>
    	<string name="status_active">Active</string>
    	<string name="status_inactive">Inactive</string>
    	
    	<string name="txt_root_error">An error occurred while attempting to get root access. Are you sure your phone is rooted?</string>
    <!-- Status -->
    
    <!-- Toggles -->
    	<string name="toggles">Toggles</string>
    
    	<string name="toggle_activate">Activate</string>
    	<string name="toggle_activate_sry">Activate proxy and tunnel network connection through the proxy server</string>
    	
    	<string name="toggle_deactivate">Deactivate</string>
    	<string name="toggle_deactivate_sry">Deactivate proxy, network connection will be direct</string>
    <!-- Toggles -->
    
    <!-- Preferences -->
    	<string name="configuration">Configuration</string>
    
    	<!-- Carrier selection -->
	    	<string name="prefs_carrier_selection">Select carrier</string>
	    	<string name="prefs_carrier_selection_sry">Use preconfigured proxy for supported carriers</string>
	    	
	    	<string name="prefs_carrier_metropcs">MetroPCS</string>
	    	<string name="prefs_carrier_cricket">Cricket</string>
	    	
		  	<string-array name="prefs_carrier_selection_entries">
		  		<item>@string/prefs_carrier_metropcs</item>
		  		<item>@string/prefs_carrier_cricket</item>
			</string-array>
			
			<!-- Do not translate! -->
			<string-array name="prefs_carrier_selection_values">
				<item>metropcs</item>
				<item>cricket</item>
			</string-array>
    	<!-- Carrier selection -->
    
    	<string name="prefs_autoswitch_enabled">Auto-switch on Wifi</string>
    	<string name="prefs_autoswitch_enabled_sry">Activate when wifi is disabled, and deactivate when wifi is enabled.</string>
    	
    	<string name="prefs_use_u2nl">Use u2nl</string>
    	<string name="prefs_use_u2nl_sry">Use u2nl binary to tunnel network connection through the proxy</string>
    <!-- Preferences -->
    
    <!-- Custom Settings -->
    	<string name="custom_settings">Custom servers</string>
    	<string name="custom_settings_sry">Use a custom proxy/mms server</string>
    
    	<string name="prefs_use_custom_proxy">Use custom proxy server</string>
    	<string name="prefs_use_custom_proxy_sry">Use your own custom proxy server instead of MetroPCS\'s default</string>
    	
    	<string name="prefs_use_custom_proxy_error">Invalid ip address and/or port number. Cannot use custom proxy server.</string>
    	
    	<string name="prefs_custom_proxy">Custom proxy</string>
    	<string name="prefs_custom_proxy_sryOn">Using: %s</string>
    	<string name="prefs_custom_proxy_sryOff">Using default proxy: %s</string>
		<string name="prefs_custom_proxy_invalid">Invalid proxy IP address and/or port</string>

		<string name="prefs_custom_proxy_port">Custom port</string>
    	<string name="prefs_custom_proxy_port_sryOn">Using: %s</string>
    	<string name="prefs_custom_proxy_port_sryOff">Using default port: %s</string>
    	
    	<string name="prefs_use_mms_u2nl">Use MMS server on u2nl</string>
    	<string name="prefs_use_mms_u2nl_sry">Also tunnel MMS through u2nl</string>
    	
    	<string name="prefs_use_custom_mms">Use custom MMS server</string>
    	<string name="prefs_use_custom_mms_sry">Use your own custom MMS server instead of MetroPCS\'s default</string>
    	
    	<string name="prefs_use_custom_mms_error">Invalid ip address and/or port number. Cannot use custom MMS server.</string>
    	
    	<string name="prefs_custom_mms">Custom MMS server</string>
    	<string name="prefs_custom_mms_sryOn">Using: %s</string>
    	<string name="prefs_custom_mms_sryOff">Using default mms server: %s</string>
		<string name="prefs_custom_mms_invalid">Invalid mms server IP address and/or port</string>

		<string name="prefs_custom_mms_port">Custom MMS port</string>
    	<string name="prefs_custom_mms_port_sryOn">Using: %s</string>
    	<string name="prefs_custom_mms_port_sryOff">Using default port: %s</string>
    <!-- Custom Settings -->
    
</resources>
